<resources>
    <string name="app_name">QueueUp</string>

    <string name="action_logout">Log out</string>
    <string name="action_settings">Settings</string>
    <string name="login_button_label">Login</string>
    <string name="logout_button_label">Logout</string>
    <string name="song_queued_toast">Song queued</string>
    <string name="title_activity_queue">QueueUp</string>
    <string name="title_activity_player">PlayerActivity</string>
    <string name="title_activity_playlist_chooser">PlaylistChooserActivity</string>
    <string name="title_activity_login">Login</string>

    <string name="drawer_open">Open</string>
    <string name="drawer_close">Close</string>
    <string name="or">or</string>
    <string name="email_address">Email address</string>
    <string name="queueup_login">Login</string>
    <string name="sign_in">Log In</string>
    <string name="register">Register</string>
    <string name="logout">Logout</string>
    <string name="log_in">Log In</string>
    <string name="playlist_name_hint">Playlist Name</string>
    <string name="add_track">Add Track</string>
    <string name="no_progress">0:00/0:00</string>
    <string name="no_track">No track</string>
    <string name="playlist">Playlist</string>
    <string name="queueup_user_placeholder">QueueUp User</string>
    <string name="play_with_spotify">Play with Spotify</string>
    <string name="no_votes">0</string>
    <string name="search_tracks">Search tracks by name, artist, or album</string>
    <string name="playlist_rename">Rename</string>
    <string name="playlist_delete">Delete</string>
    <string name="playlist_invite">Invite Friends</string>
    <string name="title_activity_invite_contacts">InviteContactsActivity</string>

    <string name="top_playlists">All Playlists</string>
    <string name="friends_playlists">Friends\' Playlists</string>
    <string name="my_playlists">My Playlists</string>
    <string name="trending_playlists">Search</string>
    <string name="search_playlists">Search playlists, users</string>
    <string name="full_name">Full name</string>
    <string name="title_activity_splash">SplashActivity</string>
    <string name="facebook_notification">Log in with Facebook to see your friends\' playlists</string>
    <string name="no_friends_playlists">Your friends don\'t have any playlists yet.</string>
    <string name="no_playlists_nearby">There are no playlists nearby.</string>
    <string name="waiting_for_location">Waiting for your location…</string>
    <string name="create_playlist_notification">You don\'t have any playlists yet.</string>
    <string name="location_not_found_title">Location not enabled</string>
    <string name="location_not_found_message">We use your location so your friends can find your playlists. Do you want to enable Location?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="nearby_playlists">Nearby Playlists</string>
    <string name="playlist_relocate">Move Here</string>
    <string name="set_location">Use Location</string>
    <string name="add_selected_tracks">Add Selected Tracks</string>
    <string name="current_location_create">Create the playlist at your current location</string>
    <string name="current_location_move">Move the playlist to your current location</string>
    <string name="playlist_reset">Reset Tracks</string>
    <string name="added_by_name">Added by %1$s</string>
    <string name="hosted_by">Hosted by</string>
    <string name="hosted_by_name">%1$s</string>
    <string name="import_from_spotify">Use your Spotify playlists</string>
</resources>
