<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    tools:context="org.louiswilliams.queueupplayer.activity.LoginActivity">


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:textSize="32sp"
        android:text="@string/queueup_login"
        android:id="@+id/textView2"
        android:gravity="center_horizontal" />

    <LinearLayout
        android:orientation="vertical"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:paddingLeft="32dp"
        android:paddingRight="32dp"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:layout_alignParentBottom="true"
        android:layout_alignParentTop="true"
        >

        <com.facebook.login.widget.LoginButton
            android:id="@+id/login_button"
            android:layout_width="fill_parent"
            android:layout_height="64dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="30dp"
            android:layout_marginTop="30dp"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/or"
            android:layout_marginBottom="25dp"
            android:id="@+id/textView"
            android:layout_gravity="center_horizontal" />

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal">

            <Button
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="@string/sign_in"
                style="?android:attr/buttonBarButtonStyle"
                android:textColor="@color/accent_material_dark"
                android:enabled="false"
                android:id="@+id/login_email_button" />

            <Button
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/register"
                style="?android:attr/buttonBarButtonStyle"
                android:textColor="@color/accent_material_dark"
                android:id="@+id/register_email_button"
                android:layout_gravity="center_horizontal" />
        </LinearLayout>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:hint="@string/email_address"
            android:ems="10"
            android:id="@+id/email"
            android:layout_gravity="center_horizontal" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textCapWords|textPersonName"
            android:hint="@string/full_name"
            android:ems="10"
            android:id="@+id/user_name"
            android:visibility="gone"
            android:layout_gravity="center_horizontal" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:hint="Password"
            android:ems="10"
            android:id="@+id/password"
            android:layout_gravity="center_horizontal" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:hint="Password confirmation"
            android:ems="10"
            android:id="@+id/password_conf"
            android:visibility="gone"
            android:layout_gravity="center_horizontal" />

        <Button
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            style="?android:attr/buttonBarButtonStyle"
            android:text="Continue"
            android:textColor="@color/accent_material_dark"
            android:id="@+id/login_multi_button" />



    </LinearLayout>
</RelativeLayout>
